--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import "./fonts.css";
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: "SUIT";
 }
 
 body {
